force-app/main/default/objects/AgenceRegionale__c/AgenceRegionale__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Transcodification Liste de valeurs Agence Regionale</description>
    <label>AgenceRegionale</label>
</CustomObject>