force-app/main/default/objects/AgenceRegionale__c/fields/AgenceRegionale__c.field-meta.xml
<CustomField>
    <fullName>AgenceRegionale__c</fullName>
    <label>AgenceRegionale</label>
    <length>225</length>
    <type>Text</type>
</CustomField>