force-app/main/default/objects/AgenceRegionale__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <length>225</length>
    <type>Text</type>
</CustomField>