force-app/main/default/objects/AgenceRegionale__c/fields/Valeur__c.field-meta.xml
<CustomField>
    <fullName>Valeur__c</fullName>
    <label>Valeur</label>
    <length>225</length>
    <type>Text</type>
</CustomField>